[package]
name = "hyper-simulations-test-issue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
turmoil = "0.4.0"
async-stream = "0.3.3"
anyhow = "1.0.68"
tracing-subscriber = "0.3.16"
tracing = "0.1.37"

hyper = { version = "0.14.23", features = ["full"] }
tokio = { version = "1", features = ["full"] }